Updates chapter-3-9-gc-memory-allocation-demo.md
Auto commit by GitBook Editor